[metadata]
name = ya-dancer
version = attr: ya_dancer.__version__
description = Get a response json reflecting the current status of the site.
long_description = file: README.md

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    Django < 3
    mongoengine

[options.extras_require]
testing =
    pytest

[options.packages.find]
where = .

[tool:pytest]
testpaths = tests
addopts = --disable-warnings -rfEs -q --durations=3
xfail_strict = true
markers =
    package: package level tests

[isort]
profile = black
known_django = django
known_twig = twig_core
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,TWIG,FIRSTPARTY,LOCALFOLDER
force_single_line = true
force_sort_within_sections = true

[flake8]
max-line-length = 88
